added img and input

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas></canvas>
+    <div class="screen">
+      <canvas></canvas>
+    </div>
+    <div class="controller">
+      <label for="resolution">Resolution: 5</label>
+      <input
+        type="range"
+        name="resolution"
+        id="resolution"
+        min="1"
+        max="20"
+        val="5"
+      />
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
