--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <canvas></canvas>
     </div>
     <div class="controller">
-      <label for="resolution">Resolution: 5</label>
+      <label id="res-lab" for="resolution">Resolution: 5</label>
       <input
         type="range"
         name="resolution"
